dh-make-perl (0.39) UNRELEASED; urgency=low

  * Set debhelper compatibility level to 6 (for dh-make-perl and the
    packages it creates).
  * Add comment and additional spaces to the created watch files to make the
    pattern easier to read and understand.

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Thu, 10 Jan 2008 19:42:49 +0100

dh-make-perl (0.38) unstable; urgency=low

  [ gregor herrmann ]
  * Fix inline documentation: it's Vcs-Svn and Vcs-Browser nowadays.

  [ Damyan Ivanov ]
  * all templates: use $(TMP) in the comment before the install
  * MakeMaker templates: do not set INSTALLVENDORARCH and VENDORARCHEXP when
    configuring. Instead, verbosely remove the empty dirs if they exist. Perl
    5.10's MakeMaker is reported to be fixed.

 -- Damyan Ivanov <dmn@debian.org>  Thu, 10 Jan 2008 17:00:03 +0200

dh-make-perl (0.37) unstable; urgency=low

  [ Martín Ferrari ]
  * Replace erroneous reference to $opts{basepkgs} in extract_depends, thanks
    to Hilko Bengen for the correction. (Closes: #452122).
  * Obtain a list of matching modules when querying CPAN (instead of just the
    first match) to allow it to correctly choose between module names that
    only differ in case. (Closes: #451838).

  [ Gunnar Wolf ]
  * Now generates packages with standards-version: 3.7.3
    (i.e. meta-bumped-up standards-version)

  [ gregor herrmann ]
  * Extend regex for matching upstream versions on the creation of
    debian/watch.

 -- Damyan Ivanov <dmn@debian.org>  Fri, 28 Dec 2007 15:16:51 +0200

dh-make-perl (0.36) unstable; urgency=low

  * Fix install dependencies in rules templates
    Before:
      install: build install-stamp
      install-stamp:
    After:
      install: install-stamp
      install-stamp: build-stamp
    Avoids problems with parallel builds
  * Use "$@" when touching stamps
  * Bump standards-version to 3.7.3 (no changes)

 -- Damyan Ivanov <dmn@debian.org>  Fri, 07 Dec 2007 11:28:18 +0200

dh-make-perl (0.35) unstable; urgency=low