@@ -68,7 +68,7 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdocs #DOCS#
-	dh_installexamples 
+	dh_installexamples
 	dh_installchangelogs #CHANGES#
 	dh_shlibdeps
 	dh_strip
@@ -84,4 +84,4 @@ source diff:
 	@echo >&2 'source and diff are obsolete - use dpkg-source -b'; false
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary
+.PHONY: build clean binary-indep binary-arch binary install
