@@ -1,9 +1,13 @@
 dh-make-perl (0.39) UNRELEASED; urgency=low
 
+  [ gregor herrmann ]
   * Set debhelper compatibility level to 6 (for dh-make-perl and the
     packages it creates).
   * Add comment and additional spaces to the created watch files to make the
     pattern easier to read and understand.
+
+  [ Damyan Ivanov ]
+  * add "install" to phony targets list
 
  -- gregor herrmann <gregor+debian@comodo.priv.at>  Thu, 10 Jan 2008 19:42:49 +0100
 
